fixed few bugs and made go button more visible

--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,80 @@ aside {
 
 }
 
+.shake-horizontal {
+	-webkit-animation: shake-horizontal 1.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both infinite;
+	        animation: shake-horizontal 1.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both infinite;
+}
+
+/* ----------------------------------------------
+ * Generated by Animista on 2020-9-10 18:25:46
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+/**
+ * ----------------------------------------
+ * animation shake-horizontal
+ * ----------------------------------------
+ */
+ @-webkit-keyframes shake-horizontal {
+  0%,
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  10%,
+  30%,
+  50%,
+  70% {
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
+  }
+  20%,
+  40%,
+  60% {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
+  }
+  80% {
+    -webkit-transform: translateX(8px);
+            transform: translateX(8px);
+  }
+  90% {
+    -webkit-transform: translateX(-8px);
+            transform: translateX(-8px);
+  }
+}
+@keyframes shake-horizontal {
+  0%,
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  10%,
+  30%,
+  50%,
+  70% {
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
+  }
+  20%,
+  40%,
+  60% {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
+  }
+  80% {
+    -webkit-transform: translateX(8px);
+            transform: translateX(8px);
+  }
+  90% {
+    -webkit-transform: translateX(-8px);
+            transform: translateX(-8px);
+  }
+}
+
  /* Bar ============================================ */
 .progress-bar {
 	border-radius: 60px;
@@ -284,7 +358,7 @@ aside {
 }
 
 .progress {
-  animation: loader 15s ease forwards;
+  animation: loader 30s ease forwards;
   /* Change the animation fill mode 'infinite' to 'forwards' to stop the animation from repeating. */
   background: #75b800;
   color: #fff;
